app/assets/stylesheets/styles.scss
/* Font Face Styles */
	.group:before,
	.group:after {
		content: "";
		display: table;
	}
	.group:after {
		clear: both;
	}
	.group{
	  *zoom: 1;
	}

	.no-margin-left {
		margin-left: 0 !important;
	}

	.no-margin-top {
		margin-top: 0 !important;
	}

	.move-up {
		margin-top: -50px;
	}

	.clear {
		clear: both;
	}

	.bullet li {
		list-style-type: disc;
	}

	.bold {
		font-family: 'Helvetica-Bold';
	}

	p strong {
		font-family: 'Helvetica-Bold';
	}


	/* Layout Styles */

	body {

		font-family: 'Helvetica-Roman', sans-serif;
		background: #f9f9f9;
		min-width: 1024px;

	}

	.wrapper {
		width: 1024px;
		margin: 0 auto;
	}

	.page-content {
		width: 1000px;
		margin: 0 auto;

	}

	h1 {
		font-family: "Helvetica-Black", Arial, sans-serif;
		font-size: 2em;
		margin-bottom: 1em;
	}

	h3 {
		font-family: "Helvetica-Black", Arial, sans-serif;
		font-weight: bold;
	}



	p {
		line-height: 1.2em;
		margin-top: 5px;
	}
	a {
		color: black;
	}

	a:hover {
		color: #62b485;;
	}

	header {
		color: white;
		background: url(/header-repeat.jpg) 50% 50% repeat;
		width: 100%;
	}

	header a {
		color: #f5f5f5;
		text-decoration: none;
	}

	header a:hover {
		color: darkgrey;
	}

	header h2 {
		font-family: 'Helvetica-Bold', sans-serif;
		text-align:center;
		color: #ccc;
		text-shadow: 1px 1px #b1b1b1;
		font-size: 1.5em;
		line-height: 1.3em;
		clear: both;
		width: 70%;
		margin-left: 20%;
		margin-bottom: 40px;
	}

	header ul li {
		display: block;
		float: left;
	}

	header img.muro-large {
		float: left;
		width: 23.73046875%;
		height: auto;
		margin: 20px 0 0 0;
	}




/* Top Navigation */
	header div.right {
	 	width: 76.26953125%;
	 	float: left;
	 	padding: 0;
/*	 	border: 1px lightblue solid;
		box-sizing: border-box;*/
	}

	nav.top {
		background: url(/header-main.jpg) bottom left;
		display: block;
		padding: 0;
		padding-bottom: 10px;
		float: left;
		width: 100%;

	}

	nav.top div.social-links img {
		float: right;
		margin: 5px;
		margin-bottom: 85px;
	}


	header ul.contact-findus {
		clear: both;
		float: left;
		margin-left: 80px;
	}


	header ul.contact-findus li.contact {

		padding-right: 13px;
		margin-right: 13px;
		border-right: 1px solid white;
	}


	div#find-a-distributor {
		float: left;
		margin-left: 15%;
		position: relative;
	}

	div#find-a-distributor a {
		padding: 1px 25px 0 0;
		background: url("/distributor-arrow.gif") no-repeat top right;
	}

	div#find-a-distributor a:hover {
		background: url("/distributor-arrow-hover.gif") no-repeat top right;
	}

		/* Drop Down Nav */
	div#find-a-distributor ul ul {
		clear: both;
		display:none;
		position: absolute;
		background: #6a6a6a;
		z-index: 2;
		font-size: .9em;
		padding: 3%;
		width: 94%;
	}



	div#find-a-distributor ul li:hover ul {
		display: block;
	}

	div#find-a-distributor ul li:hover ul li {
		float: none;
		clear: left;
		position: relative;
		display: block;
		margin: 3% 0 0 0;
	}

	div#find-a-distributor ul li:hover ul li a {
		padding: 7px;
		background: #000;
		border: 2px solid black;
		box-sizing: border-box;
		display: block;
		text-align: center;
		color: darkgrey;
		font-size: .9em;
	}

	div#find-a-distributor ul li:hover ul li a:hover {
		border: 2px solid #fff;
		color: #fff;
	}

	header form.search {
		margin-top: -5px;
		margin-left: 10%;
		display: block;
		float: left;
	}

	header form.search input {
		display: block;
		float: left;
	}

	header form.search input[type=submit]{
		padding-bottom: 3px;
	}



	/* Main Nav */

	nav.main {
		clear: both;
		width: 100%;
		font-family: 'Helvetica-Bold', Arial, sans-serif;
		font-size: 1em;
		background: #464646;
		margin-bottom: 50px;

	}

	nav.main ul {
		background-color: #62b485;
	}



	nav.main ul li {
		float: left;
		width: 15.5%;
		margin: 8px 0 8px 1%;
		text-align: center;
		position: relative;
	}

	nav.main ul li a {
		clear: both;
		display: block;
		background: black;
		padding: 18px 0 12px;
		border: 3px solid black;
		box-sizing: border-box;
		color: #959494;
		line-height: 1.3
	}

	nav.main ul li.customer-service a.two-line {
		padding: 8px 0 2px;
	}

	nav.main ul li a:hover {
		border: 3px solid white;
		color: white;
	}
	/* Drop Down Nav */
	nav.main ul ul {
		clear: both;
		display:none;
		position: absolute;
		background: #6a6a6a;
		z-index: 2;
		font-size: .9em;
		padding: 3%;
		width: 94%;
	}



	nav.main ul li:hover ul {
		display: block;
	}

	nav.main ul li:hover ul li {
		float: none;
		clear: left;
		position: relative;
		display: block;
		width: 100%;
		padding: 0 0%;
		margin: 3% 0 0 0;
	}

		nav.main ul li:hover ul li a {
		padding: 8% 5px;

	}

	/* Slider */


	#amazingslider-wrapper-1 {
		display:block;
		max-width:816px;
		padding-left:0px;
		padding-right:244px;
		margin:15px auto 0px;
	}

	#amazingslider-1 {
		display:block;
		position:relative;
		margin:0 auto
	}


/* Menu Selection */

.selection {
	width: 22.8%;
	margin: 30px 0 0 7.9%;
	float: left;

	img {
		width: 100%;
		height: auto;
		box-sizing: border-box;
		border: 2px solid $darkgrey;
	}

	img:hover {
		border: 2px solid #62b485	;
	}

	a {
		margin-top: .5em;
		text-align: center;
		display: block;
		font-family: 'Helvetica-Black';
		letter-spacing: -1px;
		text-transform: uppercase;
		font-size: 1.2em;
		line-height: 120%;
	}
}

	/* Links Row */

	#links-row img {
		width: 14%;
		height: auto;
		display: block;
		margin: 60px 0 10px 3.2%;
		float: left;
	}

	#links-row img.tools {
		background: url(/home/tools-link-hover.jpg);
	}
	#links-row img.tools:hover {
		content: url(/home/tools-link-hover.jpg);
	}

	#links-row img.screws {
		background: url(/home/screws-link-hover.jpg);
	}
	#links-row img.screws:hover {
		content: url(/home/screws-link-hover.jpg);
	}

	#links-row img.accessories{
		background: url(/home/accessories-link-hover.jpg);
	}
	#links-row img.accessories:hover {
		content: url(/home/accessories-link-hover.jpg);
	}

	#links-row img.applications{
		background: url(/home/applications-link-hover.jpg);
	}
	#links-row img.applications:hover {
		content: url(/home/applications-link-hover.jpg);
	}

	#links-row img.videos{
		background: url(/home/videos-link-hover.jpg);
	}
	#links-row img.videos:hover {
		content: url(/home/videos-link-hover.jpg);
	}

	#links-row img.specialty-products{
		background: url(/home/specialty-products-link-hover.jpg);
	}
	#links-row img.specialty-products:hover {
		content: url(/home/specialty-products-link-hover.jpg);
	}



	/* News Section */


	#news {
		width: 100%;
		margin-top: 60px;
	}

	#news article {
		width: 47.5%;
		float: left;
		margin-left: 5%;
	}

	#news article img {
		float: left;
		width: 46%;
		height: auto;
	}

	#news div.written {
		float: left;
		width: 50%;
		margin-left: 2%;
	}

	#news h3 {
		border-bottom: 1px solid #f01f15;
		padding-bottom: 5px;
		margin-bottom: 10px;
	}


	/* Main Pages General Styles */

	.heading {
		font-family: 'Helvetica-Bold', Arial, sans-serif;
	}
	h1.heading {
		font-family: 'Helvetica-Black', Arial, sans-serif;
		text-transform: uppercase;
		border-bottom: solid 1px #f01f15;
	}

	h2.heading {
		text-transform: uppercase;
		font-size: 2em;
		border-bottom: solid 1px #f01f15;
		padding-bottom: .5em;
		margin-bottom: 1em;
	}

	p.heading{
		font-size: 1.2em;
	}

	h3.heading {
		font-weight: bold;
		font-size: 1.4em;
		text-align: center;
		margin-bottom: 1em;
	}

	.application a {
		box-sizing: border-box;
	}

	p.description {
		font-size: 1.3em;
		margin: -.5em 0 2em;
	}



	/* Footer */
	footer {
		background-color: black;
		padding: 10px 0;
		margin-top: 75px;
	}

	footer .col {
		width: 13%;
		float: left;
		margin-left: 1.5%;
		font-size: .9em;

	}

	footer .col h5 a{
		margin-bottom: 5px !important;
		display: block;
	}

	footer .col h5 a{
		color: #f01f15;
	}

	footer .col h5 a:hover{
		color: #62b485;;

	}

	footer .col li a{
		color: white;
		line-height: 1.2em
	}

	footer .col li a:hover{
		color: darkgrey;
	}

	footer .col .home, footer .col .distributors{
		margin-bottom: 15px;
	}

	footer .thin {
		width: 11% !important;
	}

	footer .social-copy {
		width: 17%;
		float: right;
		text-align: right;
		color: white;

	}

	footer .social-copy img {
		float: right;
	}

	footer .social-copy img.muro{
		margin-bottom: 10px;
	}

	footer .social-copy img.youtube{
		clear: both;
		margin: 0 0 10px 10px;
	}

	footer .social-copy p {
		font-size: .8em;
		clear: right;
	}



/* Applications */

	/* Index Page */


	/* Application Template */

	img.main-pic {
		float: left;
		width: 27.3%;
	}

	div.description {
		width: 70%;
		float: left;
		margin-left: 2.7% ;

	}

	img.main-pic, .tools-for-job img {
		border: 2px solid black;
		box-sizing: border-box;
	}

	.tools-for-job img:hover {
		border: 2px solid #62b485;
	}

	h3.catch-phrase {
		color: #f01f15;
		font-family: 'Helvetica-Light', Arial;
		font-size: 1.6em;
		font-weight: normal;
		margin-bottom: 1.5em;
	}

	ul.highlights {
		list-style-type: disc;
		font-size: 1.1em;
		width: 95%;
		margin-left: 5%;
	}

	ul.highlights li {
		line-height: 1.3em;
		margin-bottom: 1.3em;
	}

	section.tools-for-job h3 {
		margin: 50px 0 -25px;
		font-size: 1.5em;
		font-family: 'Helvetica-Bold', Arial;
	}

	section.tools-for-job h4 {
		text-decoration: underline;
		font-size: 1.1em;
		font-family: 'Helvetica-Bold', Arial;
		margin-bottom: 1em;
	}

	section.tools-for-job strong {
		font-family: 'Helvetica-Bold', Arial;
	}

	section.tools-for-job strong:hover {
		text-decoration: underline;
	}

	section.tools-for-job article {
		width: 48%;
		margin: 75px 0 0 2%;
		float: left;
	}

	section.tools-for-job article img {
		width: 45%;
		float: left;
	}

	section.tools-for-job article div {
		width: 53%;
		margin-left: 2%;
		float: left;
	}

	/* Roofing Main Page */

	.roofing-app {
		width: 39%;
		float: left;
		margin-left: 7.33333333%;
	}
	.roofing-app img {
		width: 99.4%;
		padding: .3%;
		height: auto;
		border: 5px black solid;
		box-sizing: border-box;
	}

	.roofing-app img:hover {
		border: 5px #62b485 solid;
	}

	.roofing-app p {
		font-size: 1.3em;
	}

/* More Applications */

.more-applications {
	margin: 50px auto 50px;
	display: block;
	border: 1px solid black;
	padding: 3px;
	max-width: 100%;
}

#application {
	width: 100%;
	border: none;
}

#application table {
	float: left;
	text-align: center;
	color: #dbdbdb;

}

table#fixed-column {
	width: 40%;
}

div#table-container {
	width: 55%;
	overflow-x: scroll;
}

table#scroll {
	width: 2000px;
}


thead {
	font-family: 'Helvetica-Roman', Arial;
	border: none;
}


th, td  {
	padding: 10px 0 0px;
	background: #464646;
	width: 20%;
	border-left: 3px solid #f9f9f9;
}

tr.top-border {
		border-top: 1px solid #979797;
}

tr.fix1 td {
	padding-top: 15px;
}

tr.fix2 td {
	padding-top: 13px;
}

td.tool {
	padding:20px 0 6px;
}



#application table th {
	font-size: 1.3em;
	font-family: 'Helvetica-Bold', Arial;
}

#application table .grey {
	background: #979797;
	color: #2d2d2d;
}
#application table .tool {
	font-size: .7em;
	background: none;
	color: #2d2d2d;
}
#application table .black {
	font-family: 'Helvetica-Black', Arial;
}

#application table .bold {
	font-family: 'Helvetica-Bold', Arial;
}

#application table .white {
	background: none;
}

